fixing p spacing

--- a/common/app/assets/stylesheets/base/_base.less
+++ b/common/app/assets/stylesheets/base/_base.less
@@ -1,6 +1,6 @@
 p {
     color: #545454;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     .standard-font-sizing;
 }
 
